# fpm-metadata

./: CONTRIBUTING.md  README.rst  environment.yml  setup.cfg  setup.py
.github/workflows/: CI.yml
pyfpm/: model.py
src/fpm/: __init__.py
src/fpm/metadata/: __init__.py  models.py
src/pyfpm/: __init__.py  model.py  models.py
tests/: fpm-projects.txt  test_model.py
