[metadata]
name = pyfpm
version = 0.1.0
desciption = Python model for the Fortran package manifest
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/awvwgk/pyfpm
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pydantic
tests_require =
    pytest
    pytest-cov
python_requires = >=3.6

[coverage:run]
omit =
    */test_*.py

[aliases]
test=pytest
