[metadata]
name = fpm-metadata
version = 0.2.0
desciption = Python model for the Fortran package manifest
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/awvwgk/pyfpm
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    pydantic
tests_require =
    pytest
    pytest-cov
    requests
    tomli
python_requires = >=3.6

[options.packages.find]
where = src

[coverage:run]
omit =
    */test_*.py
